--- a/PKonnect/PKonnect.UI/ClientApp/src/app/shared/employee/employee-search-card/employee-search-card.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/shared/employee/employee-search-card/employee-search-card.component.html
@@ -1,11 +1,10 @@
 <div class="employee-card">
-    <!-- {{employee | json}} -->
     <div class="row">
         <div class="col-md-7">
             <div class="row">
                 <div class="col-2 display-picture">
-                    <div class="image">
-                        <img [src]="displayPicture" alt="{{employee.gender}} Avatar">
+                    <div>
+                        <img class="image" [src]="displayPicture" alt="{{employee.gender}} Avatar">
                     </div>
                 </div>
                 <div class="col-1"></div>
@@ -17,10 +16,8 @@
                         </div>
                         <div class="col-7">
                             <div class="row">
-                                <button type="button" 
-                                class="btn btn-mentor"
-                                matTooltip="Feature Coming Soon..."
-                                matTooltipPosition="above">
+                                <button type="button" class="btn btn-mentor" matTooltip="Feature Coming Soon..."
+                                    matTooltipPosition="above">
                                     <fa-icon class="slider-icon" [icon]="faUserCircle" size="lg"></fa-icon>
                                     <span class="mentor-text">Mentor</span>
                                 </button>
@@ -32,7 +29,7 @@
                         </div>
                     </div>
                     <div class="row employee-description">
-                        <p >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur quidem obcaecati velit
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur quidem obcaecati velit
                             sequi ipsam consequatur, distinctio ut?</p>
                     </div>
                     <!-- Hiding View profile until view profile page is ready -->
@@ -42,56 +39,33 @@
         </div>
         <div class="col-md-5 employee-skills">
             <div class="row employee-minor-details">
-                <span *ngIf="true">
+                <span *ngIf="true" class="employee-assignment">
                     <fa-icon class="slider-icon" [icon]="faCheckCircle" size="md"
                         [styles]="{'stroke': '#17CB6A', 'color': '#17CB6A'}"></fa-icon>
                     <strong> Available for Assignment</strong>
                 </span>
-                <span>
+                <span class="employee-location" *ngIf="!!employee.city || !!employee.state">
                     <fa-icon class="slider-icon" [icon]="faMap" size="md"></fa-icon>
-                    {{employee.city}}, {{employee.state}}
+                    <span *ngIf="!!employee.city" class="employee-city">{{employee.city}}</span>
+                    <span *ngIf="!!employee.state" class="employee-state">, {{employee.state}}</span>
                 </span>
-                <span class = "employee-email"
-                matTooltip="{{employee.email}}"
-                matTooltipPosition="right">
+                <span class="employee-email" matTooltip="Click to copy Email" matTooltipPosition="right"
+                    (click)="copyEmailToClipboard(employee.email)">
                     <fa-icon class="slider-icon" [icon]="faEnvelope" size="md"></fa-icon>
-                    Email Invite
+                    Email
                 </span>
             </div>
             <div class="employee-skills-display">
                 <div class="row employee-skill-display" *ngFor="let employeeSkill of employee.employeeSkills">
-                    <div class="col-5"><span class="skill-name">{{employeeSkill.skillType}}</span></div>
-                    <div class="col-7 employee-rating-bar">
+                    <div class="col-6"><span class="skill-name">{{employeeSkill.textName | truncate:21:"..."}}</span></div>
+                    <div class="col-6 employee-rating-bar">
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" [style.width.%]="employeeSkill.skillRating*20"  aria-valuenow="25"
-                                aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar" role="progressbar" [style.width.%]="employeeSkill.skillRating*20"
+                                aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
-
-                    <!-- {{employeeSkill.skillRating}} -->
                 </div>
             </div>
         </div>
     </div>
 </div>
-
-
-
-<!-- 
-            {{employee.employeeStatus}}
-            {{employee.siteCity}}
-            {{employee.siteState}}
-            {{employee.primaryEmailAddress}}
-            {{employee.skills}}
- -->
-
-
-<!-- employee title not available -->
-<!-- {{employee.reportsTo}} It is string it should be an ID  -->
-<!-- {{employee.isMvp}} not available in response -->
-<!-- need enum to loop through different employeeStatus -->
-<!-- not available in response employee skills -->
-<!-- profile picture ??
-employee description ??
-Deployment & AuthN with outlook
--->
