--- a/PKonnect/PKonnect.UI/ClientApp/src/styles.scss
+++ b/PKonnect/PKonnect.UI/ClientApp/src/styles.scss
@@ -32,3 +32,8 @@ $pk-connections-theme: mat-light-theme($pk-connections-primary, $pk-connections-
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: #E5E5E5; }
+
+::ng-deep .mat-snack-bar-container.snack-bar-success {
+    background-color: green($color: white);
+    color: black;
+}
