Add static card height, encode query param and update filter request, validations and minor changes

--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-filter/employee-search-filter.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-filter/employee-search-filter.component.html
@@ -58,7 +58,9 @@
                             <mat-option #locationSearch *ngFor="let option of filteredLocationOptions | async"
                                 [value]="option">
                                 {{option}}
-                                <ngx-emoji [emoji]="{ id: 'santa', skin: 3 }" size="14"></ngx-emoji>
+                                <!-- <span class="country-flag">
+                                        <ngx-emoji [emoji]="locationFlags[option]" size="18"></ngx-emoji>
+                                </span> -->
                             </mat-option>
                         </mat-autocomplete>
                     </mat-form-field>
