--- a/PKonnect/PKonnect.UI/ClientApp/src/app/shared/employee/employee-search-card/employee-search-card.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/shared/employee/employee-search-card/employee-search-card.component.html
@@ -12,11 +12,11 @@
                 <div class="col-1"></div>
                 <div class="col-9 employee-details">
                     <div class="row">
-                        <div class="col-5">
+                        <div class="col-12">
                             <span class="employee-full-name">{{employee.fullName}}</span><br>
-                            <span class="employee-role">{{employee.primarySkill}}</span>
+                            <span class="employee-role">{{employee.role}}</span>
                         </div>
-                        <div class="col-7">
+                        <!-- <div class="col-5">
                             <div class="row">
                                 <button type="button" class="btn btn-mentor" matTooltip="Feature Coming Soon..."
                                     matTooltipPosition="above">
@@ -28,7 +28,7 @@
                                     <span class="mentor-text">MVP</span>
                                 </button>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="row employee-description">
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur quidem obcaecati velit
