--- a/PKonnect/PKonnect.UI/ClientApp/src/app/shared/employee/employee-search-card/employee-search-card.component.scss
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/shared/employee/employee-search-card/employee-search-card.component.scss
@@ -190,7 +190,7 @@
 }
 
 ::ng-deep .mat-snack-bar-container.snack-bar-success {
-    background-color: green;
+    background-color: #28a745;
     color: #ffffff;
 }
 
