--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-filter/employee-search-filter.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-filter/employee-search-filter.component.html
@@ -38,7 +38,7 @@
                 <div class="col-lg-2">
                     <mat-form-field>
                         <input type="text" #availabilityInput placeholder="Resource Status" matInput
-                            [formControl]="availabilityControl" [matAutocomplete]="availability">
+                            [formControl]="availabilityControl" [matAutocomplete]="availability" (change)="handleEmptyInput($event, 'resourceStatus')">
                         <mat-autocomplete autoActiveFirstOption #availability="matAutocomplete"
                             (optionSelected)="setAvailability($event.option.value)">
                             <mat-option #availabilitySearch *ngFor="let option of filteredAvailabilityOptions | async"
@@ -52,7 +52,7 @@
                 <div class="col-lg-2">
                     <mat-form-field>
                         <input type="text" #locationInput placeholder="Location" matInput
-                            [formControl]="locationControl" [matAutocomplete]="location">
+                            [formControl]="locationControl" [matAutocomplete]="location" (change)="handleEmptyInput($event, 'location')">
                         <mat-autocomplete autoActiveFirstOption #location="matAutocomplete"
                             (optionSelected)="setLocation($event.option.value)">
                             <mat-option #locationSearch *ngFor="let option of filteredLocationOptions | async"
