--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-filter/employee-search-filter.component.scss
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-filter/employee-search-filter.component.scss
@@ -161,3 +161,8 @@ h1 {
 ::ng-deep .mat-form-field-underline {
     display: none;
 }
+
+::ng-deep .mat-snack-bar-container.snack-bar-danger {
+    background-color: #dc3545;
+    color: #fff;
+}
