--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/search-form/search-name-input/search-name-input.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/search-form/search-name-input/search-name-input.component.html
@@ -1,13 +1,14 @@
 <form #searchNameForm>
-        <mat-form-field>
-            <input type="text" #searchNameInput placeholder="Search by name" matInput [formControl]="myControl"
-                [matAutocomplete]="name" (keyup.enter)="log(myControl.value);"
-                (change)="handleEmptyInput($event)">
-            <mat-autocomplete autoActiveFirstOption #name="matAutocomplete">
-                <mat-option #searchName *ngFor="let option of filteredOptions | async" [value]="option"
-                    (onSelectionChange)="log(option)">
-                    {{option}}
-                </mat-option>
-            </mat-autocomplete>
-        </mat-form-field>
-    </form>
+    <mat-form-field>
+        <input type="text" #searchNameInput placeholder="Search by name" matInput [formControl]="myControl"
+            [matAutocomplete]="name" (change)="handleEmptyInput($event)">
+        <mat-autocomplete autoActiveFirstOption #name="matAutocomplete">
+            <mat-option #searchName *ngFor="let option of filteredOptions | async" [value]="option"
+                (onSelectionChange)="log(option)" matTooltip="{{option}}" matTooltipPosition="right">
+                {{option}}
+            </mat-option>
+        </mat-autocomplete>
+    </mat-form-field>
+</form>
+
+<!-- (keyup.enter)="log(myControl.value);" (change)="handleEmptyInput($event)" -->
