--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/search-form/search-skill-input/search-skill-input.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/search-form/search-skill-input/search-skill-input.component.html
@@ -2,14 +2,17 @@
     <mat-form-field>
         <input type="text" #searchSkillInput placeholder="Search by skill(s)" matInput [formControl]="myControl"
             [matAutocomplete]="skills">
-        <mat-autocomplete autoActiveFirstOption #skills="matAutocomplete" (optionSelected)="log($event.option.value); searchSkillInput.value=''">
-            <mat-option #skillSearch *ngFor="let option of filteredOptions | async" [value]="option">
+        <mat-autocomplete autoActiveFirstOption #skills="matAutocomplete"
+            (optionSelected)="log($event.option.value); searchSkillInput.value=''">
+            <mat-option #skillSearch *ngFor="let option of filteredOptions | async" [value]="option"
+                matTooltip="{{option}}" matTooltipPosition="right">
                 {{option}}
             </mat-option>
         </mat-autocomplete>
     </mat-form-field>
 </form>
 
+<!-- (optionSelected)="log($event.option.value); searchSkillInput.value=''" -->
 <!-- (onSelectionChange)="log(option); skillSearch.value=''" -->
 <!-- (submit)="skillSearchForm.reset()" -->
 <!-- (keyup.enter)="log(myControl.value); searchSkillInput.value=''"  -->
